# oogway

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.qml
.rcc/: configuration.qrc
Login/: CMakeLists.txt  db.cpp  db.hpp  db.qml
forms/: calculatorform.ui
src/: db.cpp  main.cpp
